[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/rest_controller.gd" id="1"]

[node name="RestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.03, 0.05, 0.04, 1.0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 48

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="RestTitleLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "A Moment of Respite"
horizontal_alignment = 1

[node name="Sep" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="RestInfoLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 2
text = "Rest to recover HP..."
horizontal_alignment = 1

[node name="RestBtn" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Rest"
